feat: update crud shop
