# internal/model/shop.go
@@ -7,10 +7,11 @@ import (
 )
 
 type Shop struct {
-	ID        primitive.ObjectID  `bson:"_id,omitempty" json:"id"`
-	Name      string              `bson:"name" json:"name"`
-	Budget    float64              `bson:"budget,default=0" json:"budget"`
-	CreatedBy *UserResponseOnShop `bson:"created_by,omitempty"`
-	CreatedAt time.Time           `bson:"created_at" json:"created_at"`
-	UpdatedAt time.Time           `bson:"updated_at" json:"updated_at"`
+	ID        		primitive.ObjectID  `bson:"_id,omitempty" json:"id"`
+	Name      		string              `bson:"name" json:"name"`
+	Budget    		float64             `bson:"budget,default=0" json:"budget"`
+	CreatedBy   	primitive.ObjectID  `bson:"created_by" json:"created_by"`
+	User      		*UserResponseOnShop `bson:"user,omitempty" json:"user"`
+	CreatedAt 		time.Time           `bson:"created_at" json:"created_at"`
+	UpdatedAt 		time.Time           `bson:"updated_at" json:"updated_at"`
 }
